objects/LAT_BR_Training_Survey__c.object
<CustomObject>
    <fields>
        <fullName>LAT_BR_TS_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TS_Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BR Training Surveys</relationshipLabel>
        <relationshipName>BR_Training_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TS_Data__c</fullName>
        <label>Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TS_Other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TS_Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TS_TrainingType__c</fullName>
        <label>Training Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CSR</fullName>
                </value>
                <value>
                    <fullName>MIXOLOGISTA</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_TS_Visita__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visita</label>
        <referenceTo>Visitas__c</referenceTo>
        <relationshipLabel>BR Training Surveys</relationshipLabel>
        <relationshipName>LAT_BR_TS_Visitas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BR Training Survey</label>
    <nameField>
        <label>BR Training Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BR Training Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>